# blender-wheel

./: .gitignore  .pre-commit-config.yaml  BRUTAL_REVIEW.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FIXES_SUMMARY.md  GETTING_STARTED.md  LOCAL_BUILD.md  PROJECT_ANALYSIS.md  README.md  SECURITY.md  TROUBLESHOOTING.md  build_blender_wheel.sh  pre-commit-requirements.txt  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
blender-demo/: README.md  animation_demo.py  demo,py  demo.py  generate_scene_assets.py  materials_demo.py  requirements.txt
blender-demo/scripts/: __init__.py  constants.py  render_batch.py  utils.py
buildspec.yml/: blender-whl.yml
cf/: codebuild.yml
tests/: README.md  __init__.py  conftest.py  test_build_script.py  test_config.py  test_demo_scripts.py  test_documentation.py  test_imports.py  test_utils_unit.py
