[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blender-wheel-builder"
version = "1.0.0"
description = "Infrastructure for building Blender 4.4 as a Python wheel package"
readme = "README.md"
requires-python = "~=3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "Blender Wheel Contributors"}
]
keywords = ["blender", "3d", "rendering", "python", "wheel"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
    "Topic :: Software Development :: Build Tools",
]

dependencies = [
    "numpy==1.26.4",
    "pillow==10.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "pre-commit>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/darkrelics/blender-wheel"
Repository = "https://github.com/darkrelics/blender-wheel"
Issues = "https://github.com/darkrelics/blender-wheel/issues"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
omit = [
    "*/test_*.py",
    "*/conftest.py",
]

[tool.coverage.report]
# Exclude bpy-dependent code that can't be tested without Blender
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "import bpy",
    "bpy\\.",
]
